# spider-robot

./: LICENSE  README.md
src/rf24_ros2/: CMakeLists.txt  package.xml
src/rf24_ros2/src/: rf24_node.cpp
src/spiderproj_bringup/: CMakeLists.txt  package.xml
src/spiderproj_bringup/config/: global_params.yaml
src/spiderproj_bringup/launch/: dev.launch.py  rviz2.launch.py  teleop.launch.py  test.launch.py  testteleop.launch.py
src/spiderproj_description/: CMakeLists.txt  package.xml
src/spiderproj_description/meshes/: Coxa_L.stl  Coxa_R.stl  Coxa_R2.stl  Femur_L.stl  Femur_R.stl  Tibia_L.stl  Tibia_R.stl
src/spiderproj_description/rviz/: config.rviz
src/spiderproj_description/urdf/: spiderproj.xacro
src/spiderproj_keyboard/: CMakeLists.txt  package.xml
src/spiderproj_keyboard/src/: keyboard_node.cpp
src/spiderproj_kinematics/: CMakeLists.txt  package.xml
src/spiderproj_kinematics/src/: hexapod_paths.hpp  kinematics.cpp  kinematics.hpp  leg.hpp
src/spiderproj_msg/: CMakeLists.txt  package.xml
src/spiderproj_msg/msg/: BodyControl.msg  FeetContacts.msg  JointAngles.msg  JoyData.msg  MetaCommands.msg  PoseEuler.msg  Servo2040Data.msg
src/spiderproj_nrf24/: CMakeLists.txt  package.xml
src/spiderproj_nrf24/src/: rf24_node.cpp
src/spiderproj_servo2040com/: CMakeLists.txt  package.xml
src/spiderproj_servo2040com/src/: servo2040_node.cpp
src/spiderproj_teleop_joy/: CMakeLists.txt  package.xml
src/spiderproj_teleop_joy/src/: spiderproj_teleop_joy.cpp  spiderproj_teleop_joy.hpp
