<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spiderproj_kinematics</name>
  <version>1.0.0</version>
  <description>Kinematics package for spiderproj the Hexapod. Executes body pose control, gait trajectory generation, and publishing of end-effector positions.</description>
  <maintainer email="jirakorn.sukmee@gmail.com">Jirakorn Sukmee</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>orocos_kdl</depend>
  <depend>spiderproj_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>